name: typed-template-haskell
version: 0.1
cabal-version: >= 1.12
build-type: Simple

library
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends:
    base,
    ghc,
    syb
  exposed-modules:
    Plugins.TypedTemplateHaskell

test-suite example
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: example
  main-is: Main.hs
  other-modules: Example
  build-depends:
    base,
    template-haskell,
    typed-template-haskell
